--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -7,7 +7,7 @@ ext.ntcoreDep = { ->
     } else {
       classifier = buildType
     }
-    return "edu.wpi.first.wpilib.networktables.java:NetworkTables:+:$classifier"
+    return "edu.wpi.first.wpilib.networktables.java:NetworkTables:3.1.6:$classifier"
 }
 
 ext.cscoreDep = { ->
@@ -17,13 +17,13 @@ ext.cscoreDep = { ->
     } else {
       classifier = buildType
     }
-    return "edu.wpi.cscore.java:cscore:+:$classifier"
+    return "edu.wpi.cscore.java:cscore:1.0.1:$classifier"
 }
 
 ext.getOpenCvPlatformPackage = { ->
   if (buildType == "windows") {
     if (System.getProperty("os.arch") == "amd64") {
-      return "windows-x86_2015"
+      return "windows-x86_64_2015"
     } else {
       return "windows-x86_2015"
     }
